livedatabus kotlin 版本实现

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,15 +14,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <ProgressBar
         android:id="@+id/progress_bar"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="35dp"
+        android:layout_marginTop="10dp"
         android:background="@null"
         android:max="100"
-        android:layout_marginTop="20dp"
         android:progressDrawable="@drawable/maoyan_mc_vote_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,161 +38,200 @@
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="跳转room"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_home"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:text="跳转room"
-        tools:textColor="@color/color_3d3" />
+        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
 
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRoom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="跳转room"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constrainedHeight="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:text="跳转room"
-        tools:textColor="@color/color_3d3" />
+        android:layout_marginBottom="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_home">
 
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnWebView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="跳转webview"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRoom"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:text="跳转webview"
-        tools:textColor="@color/color_3d3" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="跳转room"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:text="跳转room"
+                tools:textColor="@color/color_3d3" />
 
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnTask"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="跳转 task"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnWebView"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:textColor="@color/color_3d3" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="跳转 button"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnTask"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:textColor="@color/color_3d3" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnRoom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="跳转room"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:text="跳转room"
+                tools:textColor="@color/color_3d3" />
 
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnButtonBanner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="跳转 bannerloop"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnButton"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:textColor="@color/color_3d3" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnWebView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="跳转webview"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnRoom"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:text="跳转webview"
+                tools:textColor="@color/color_3d3" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnButtonP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="跳转 shadow P"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:backgroundTint="#ffffff"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/icon_cell_like"
-        app:iconGravity="textStart"
-        app:iconPadding="4dp"
-        app:iconTint="@color/color_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnButtonBanner"
-        tools:icon="@drawable/icon_cell_like"
-        tools:iconTint="@color/color_3d3"
-        tools:textColor="@color/color_3d3" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnTask"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="跳转 task"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnWebView"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="跳转 button"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnTask"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnButtonBanner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="跳转 bannerloop"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnButton"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnButtonP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="跳转 shadow P"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnButtonBanner"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnButtonX"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="liveData"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnButtonP"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
