--- a/app/src/main/res/layout/activity_coroutine.xml
+++ b/app/src/main/res/layout/activity_coroutine.xml
@@ -103,7 +103,7 @@
 
 
         <TextView
-            android:id="@+id/tv_joke"
+            android:id="@+id/tvJoke"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -125,7 +125,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvJoke"
             android:layout_width="match_parent"
+            android:layout_marginBottom="20dp"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line1" />
 
