--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -436,4 +436,42 @@
         <attr format="color" name="maoyan_adx_indicator_bg_color"/>
         <attr format="color" name="maoyan_adx_indicator_selected_color"/>
     </declare-styleable>
+
+    <declare-styleable name="SampleCircleImageView">
+        <!-- 源图片 -->
+        <attr name="src" format="reference" />
+        <!-- 圆角大小 -->
+        <attr name="radius" format="dimension" />
+    </declare-styleable>
+
+    <declare-styleable name="YLCircleImageView">
+        <attr name="radiusYL" format="dimension">圆角半径</attr>
+        <attr name="topLeftRadiusYL" format="dimension">左上</attr>
+        <attr name="topRightRadiusYL" format="dimension">右上</attr>
+        <attr name="bottomLeftRadiusYL" format="dimension">左下</attr>
+        <attr name="bottomRightRadiusYL" format="dimension">右下</attr>
+
+        <attr name="topLeftRadius_xYL" format="dimension">左上X轴</attr>
+        <attr name="topLeftRadius_yYL" format="dimension">左上Y轴</attr>
+
+        <attr name="topRightRadius_xYL" format="dimension">右上X轴</attr>
+        <attr name="topRightRadius_yYL" format="dimension">右上Y轴</attr>
+
+        <attr name="bottomLeftRadius_xYL" format="dimension">左下X轴</attr>
+        <attr name="bottomLeftRadius_yYL" format="dimension">左下Y轴</attr>
+
+        <attr name="bottomRightRadius_xYL" format="dimension">右下X轴</attr>
+        <attr name="bottomRightRadius_yYL" format="dimension">右下Y轴</attr>
+
+        <attr name="borderWidthYL" format="dimension">描边宽度</attr>
+        <attr name="borderColorYL" format="color">描边颜色</attr>
+        <attr name="borderSpaceYL" format="dimension">描边与图片间距</attr>
+        <!-- 无论是什么展示形式，都会填充满整个控件，如果不想填充满，自己去改onDraw里面的 dst -->
+        <attr name="scaleTypeYL" format="enum">
+            <enum name="top" value="0">从图片顶部开始绘制，即肯定会展示图片顶部，默认</enum>
+            <enum name="center" value="1">展示图片中心</enum>
+            <enum name="bottom" value="2">从图片底部开始绘制，即肯定会展示图片底部</enum>
+            <enum name="fitXY" value="3">完全展示，有可能变形</enum>
+        </attr>
+    </declare-styleable>
 </resources>
