--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    android:layout_height="match_parent">
 
 
     <com.mao.jetpack.widget.SampleCircleImageView
@@ -38,13 +37,23 @@
         app:layout_constraintStart_toEndOf="@+id/imageRound"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.mao.jetpack.ui.image.EllipsizeViewPlus
+        android:id="@+id/tvDest"
+        android:layout_width="200dp"
+        android:textSize="19sp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imagePic"
+        tools:text="《奇迹笨小孩》专项" />
+
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageClip"
         android:layout_width="300dp"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageRound" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDest" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
