--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -47,13 +47,28 @@
         app:layout_constraintTop_toBottomOf="@+id/imagePic"
         tools:text="《奇迹笨小孩》专项" />
 
+    <com.mao.jetpack.ui.image.TextViewEllipsize
+        android:id="@+id/tvDestMY"
+        android:layout_width="200dp"
+        android:textSize="19sp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:maxLines="2"
+        android:text="《奇迹笨小孩love-lovelove》专项"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDest"
+        app:my_delimiter="》"
+        app:my_maxLine="2"
+        app:my_replace_symbol="..."
+        />
+
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageClip"
         android:layout_width="300dp"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDest" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDestMY" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
