--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -33,35 +33,43 @@
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         android:scaleType="centerCrop"
-        tools:src="@drawable/image_girl"
         app:layout_constraintStart_toEndOf="@+id/imageRound"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/image_girl" />
 
     <com.mao.jetpack.ui.image.EllipsizeViewPlus
         android:id="@+id/tvDest"
-        android:layout_width="200dp"
-        android:textSize="19sp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:textColor="@color/colorAccent"
+        android:textSize="19sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagePic"
         tools:text="《奇迹笨小孩》专项" />
 
     <com.mao.jetpack.ui.image.TextViewEllipsize
         android:id="@+id/tvDestMY"
-        android:layout_width="200dp"
-        android:textSize="19sp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        tools:text="《奇迹笨小孩love-lovelove》专项"
         android:textColor="@color/colorAccent"
-        android:maxLines="2"
-        android:text="《奇迹笨小孩love-lovelove》专项"
+        android:textSize="19sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDest"
         app:my_delimiter="》"
         app:my_maxLine="2"
-        app:my_replace_symbol="..."
-        />
+        app:my_replace_symbol="..." />
 
+
+    <com.mao.jetpack.ui.image.TextViewEllipsize
+        android:id="@+id/tvDestMY2"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:textSize="19sp"
+        app:layout_constraintStart_toEndOf="@+id/tvDestMY"
+        app:layout_constraintTop_toBottomOf="@+id/tvDest"
+        tools:text="《奇迹笨小孩love-lovelove》专项" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageClip"
