--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -63,10 +63,11 @@
 
     <com.mao.jetpack.ui.image.TextViewEllipsize
         android:id="@+id/tvDestMY2"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/colorAccent"
         android:textSize="19sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvDestMY"
         app:layout_constraintTop_toBottomOf="@+id/tvDest"
         tools:text="《奇迹笨小孩love-lovelove》专项" />
