--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -69,6 +69,27 @@
         tools:textColor="@color/color_3d3" />
 
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_meituan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转 美团app"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:backgroundTint="#ffffff"
+        app:cornerRadius="0dp"
+        app:icon="@drawable/icon_cell_like"
+        app:iconGravity="textStart"
+        app:iconPadding="4dp"
+        app:iconTint="@color/color_theme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn"
+        tools:icon="@drawable/icon_cell_like"
+        tools:iconTint="@color/color_3d3"
+        tools:text="跳转room"
+        tools:textColor="@color/color_3d3" />
+
+
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
