--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -52,7 +52,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         tools:text="《奇迹笨小孩love-lovelove》专项"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/color_theme"
         android:textSize="19sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDest"
@@ -81,6 +81,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
@@ -96,6 +97,18 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <com.mao.jetpack.ui.image.TextViewEllipsize
+        android:id="@+id/tvDestMY3"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:textSize="19sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll"
+        tools:text="《奇迹笨小孩love-lovelove》专项" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
