--- a/app/src/main/res/layout/activity_animator_ui.xml
+++ b/app/src/main/res/layout/activity_animator_ui.xml
@@ -9,9 +9,9 @@
 
 
     <FrameLayout
-        android:layout_width="82dp"
-        android:layout_height="108dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/fl"
+        android:layout_width="114dp"
+        android:layout_height="152dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,18 +19,70 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image2"
-            android:layout_width="70dp"
-            android:layout_height="100dp"
+            android:layout_width="96dp"
+            android:layout_height="136dp"
             android:layout_gravity="end|center_vertical"
             android:src="@drawable/a_image_1" />
 
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image1"
-            android:layout_width="76dp"
-            android:layout_height="108dp"
+            android:layout_width="106dp"
+            android:layout_height="152dp"
             android:layout_gravity="start|center_vertical"
             android:src="@drawable/a_image_2" />
+
+
+
+        <View
+            android:layout_gravity="center"
+            android:background="@color/design_default_color_error"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        app:layout_constraintBottom_toBottomOf=" @+id/fl"
+        app:layout_constraintEnd_toEndOf="@+id/fl"
+        app:layout_constraintStart_toStartOf="@+id/fl"
+        android:background="@color/black"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:text="积分"
+            android:textColor="@color/colorAccent" />
+
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:id="@+id/fl_bt"
+        android:layout_width="114dp"
+        android:layout_height="152dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image4"
+            android:layout_width="96dp"
+            android:layout_height="136dp"
+            android:layout_gravity="end|center_vertical"
+            android:src="@drawable/a_image_1" />
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image3"
+            android:layout_width="106dp"
+            android:layout_height="152dp"
+            android:layout_gravity="start|center_vertical"
+            android:src="@drawable/a_image_2" />
+
 
     </FrameLayout>
 
